Wed Feb 11 02:08:04 2004  Tim Janik  <timj@gtk.org>

	* bse-plugin-generator.c: removed this file.

	* Makefile.am: install sfidl instead of bse-plugin-generator.

Sun Feb  8 03:48:36 2004  Tim Janik  <timj@gtk.org>

	* sfitypes.c (sfi_choice_match_detailed): only match partial choice
	names starting at word boundaries.

	* sfiustore.[hc]: added sfi_upool_list() function to list ids in a pool.

	* sfivalues.[hc]:
	(sfi_value_choice2enum):
	(sfi_choice2enum): match choices against enum value names only, since
	nicks are going to be used for the GUI and since the partial and
	canonifying matching supported by sfi_choice_match_detailed() already
	xceeds the flexibility provided by nicks by orders of magnitude.
	(sfi_choice2enum_checked): introduced error-checking version of
	sfi_choice2enum().
	(sfi_enum2choice): provide choices in schme-canonified form (lower
	case, delimited by '-').

Wed Feb  4 22:37:56 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfilog.c: Speed optimization: Lookup the GQuark for the sfi log
	key in the init function instead of during each log message.

	* sfivalues.c: Speed optimization: Use sfi_categorize_type() to find
	out which type src_value has in sfi_value_copy_deep(), instead of
	multiple if statements.

Sun Feb  1 16:10:42 2004  Tim Janik  <timj@gtk.org>

	* sfifilecrawler.[hc]: added sfi_make_dirname_path() to easily
	create all directories required by a filename.
	added sfi_path_get_filename() to create absolte filenames,
	properly expanding ~ and ~USER.

	* sfiserial.c: serialize :hex ints by writing out hexadecimal numbers.

Wed Jan 28 15:46:16 2004  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: remove --module option. select the core
	C++ language binding via --core-cxx or via --plugin.

	* sfidl-cxx.cc: fixed option description.

	* bse-plugin-generator.cc: adapt to --plugin option.

Tue Jan 27 16:31:13 2004  Tim Janik  <timj@gtk.org>

	* sfidl-module.cc: cleaned up some cruft.
