@@ -1,3 +1,10 @@
+Wed Feb 11 08:09:57 2004  Tim Janik  <timj@gtk.org>
+
+	* sfiprimitives.c: applied sfi_seq_append_empty() code simplification
+	patch from Stefan Westerfeld.
+
+	* sfiglue.c: same here.
+
 Wed Feb 11 02:08:04 2004  Tim Janik  <timj@gtk.org>
 
 	* bse-plugin-generator.c: removed this file.
